--- a/arcanic.html
+++ b/arcanic.html
@@ -28,6 +28,9 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="resume.html">Resume</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link disabled" href="contact.html">Contact</a>
           </li>
           <li class="nav-item">
@@ -49,16 +52,16 @@
       <div id="dinoDiceCarousel" class="carousel slide col-md-6" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/Engot.jpg" class="d-block w-100 img-fluid w-100" alt="...">
+            <img src="images/Engot.jpg" width="1521" height="927" class="d-block w-100 img-fluid w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images/GubbyV1.jpg" class="d-block w-100 img-fluid w-100" alt="...">
+            <img src="images/GubbyV1.jpg" width="1521" height="927" class="d-block w-100 img-fluid w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images/WrenchFront.jpg" class="d-block w-100 img-fluid w-100" alt="...">
+            <img src="images/WrenchFront.jpg" width="1521" height="927" class="d-block w-100 img-fluid w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images/WrenchBack.jpg" class="d-block w-100 img-fluid w-100" alt="...">
+            <img src="images/WrenchBack.jpg" width="1521" height="927" class="d-block w-100 img-fluid w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#dinoDiceCarousel" data-bs-slide="prev">
