--- a/dino.html
+++ b/dino.html
@@ -28,6 +28,9 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="resume.html">Resume</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link disabled" href="contact.html">Contact</a>
           </li>
           <li class="nav-item">
@@ -50,16 +53,16 @@
       <div id="dinoDiceCarousel" class="carousel slide col-md-6" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/Dino1.png" class="d-block w-100 img-fluid w-100" alt="...">
+            <img src="images/Dino1.png" width="1569" height="833" class="d-block w-100 img-fluid w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images/Dino2.png" class="d-block w-100 img-fluid w-100" alt="...">
+            <img src="images/Dino2.png" width="1049" height="590" class="d-block w-100 img-fluid w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images/Dino3.png" class="d-block w-100 img-fluid w-100" alt="...">
+            <img src="images/Dino3.png" width="1235" height="695" class="d-block w-100 img-fluid w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images/Dino4.png" class="d-block w-100 img-fluid " alt="...">
+            <img src="images/Dino4.png" width="1236" height="695" class="d-block w-100 img-fluid " alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#dinoDiceCarousel" data-bs-slide="prev">
